# obsidian-utilities

./: 404.html  CHANGELOG.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md  layout.md
layout/: index.html
search/: search_index.json
src/common/: common.py
src/configuration/: configuration.py  configuration.toml
src/obsidian_utilities/: configuration.py  obsidian_utilities.py
src/templates/: copy_template.py  templates.py
src/utilities/: utilities.py
src/vaults/: analyzer.py  date_parser.py
templates/: copy_template.py
tests/: test_common.py  test_configuration.py  test_copy_template.py  test_templates.py  test_utilities.py
tests/test_templates/: test_copy_template.py
