[tool.poetry]
name = "obsidian-utilities"
version = "0.0.1"
description = "Fundamental note utilities that coincide with the Obsidian application."
authors = ["Jason Boyd <jasonboyd99@gmail.com>"]
maintainers = ["Jason Boyd <jasonboyd99@gmail.com>"]
repository = ""
keywords = ["obsidian", "notes"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"


[tool.poetry.group.docs]
optional = true


[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "^9.5.49"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
